--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,27 @@
 
+//MY THEME COLORS
+$red:     #dc3545;
+$yellow:  #ffc107;
+
+//WHITE & GRAY COLORS
+$white:    #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black:    #000;
+
+
+$primary:$yellow;
+$secondary:$red;
+
+
+
+
 //IMPORT BOOTSTRAP5
-@import url(../node_modules/bootstrap/scss/bootstrap.scss);
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
